fixed layout overflowing

--- a/style.css
+++ b/style.css
@@ -248,11 +248,6 @@ padding-top: 30px;
 
 
 
-@media screen and (max-width: 1200px) {
-    .main-container{
-        width: 95%;
-    }
-}
 
 
 .about-wrapper{
@@ -314,7 +309,7 @@ padding-top: 30px;
 	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
 	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
     margin: 5px;
-     
+   
      
 }
 
@@ -403,6 +398,7 @@ padding-top: 30px;
 }
 
 
+
 @media screen and (max-width: 1200px){
 	.main-container{
 		width: 95%;
@@ -419,22 +415,50 @@ padding-top: 30px;
         ;
     }
     .right-column{
+        margin-top: 0;
+        padding-top: 0;
+        margin-bottom: 30px;
+        margin-right: 30px;
         justify-content: center;
+      
     }
 
     }
 
     @media screen and (max-width: 400px){
         #preview-shadow{
-            max-width: 280px;
+            max-width: 240px;
             height: 180px;
             padding-left: 10px;
             padding-top: 10px;
         }
     
         #preview{
-            width: 260px;
+            width: 80%;
+            height: 70%;
+            margin-bottom: 10px;
+         
     
+        }
+        .s2 {
+            display: grid;
+            grid-template-columns: 1fr;
+            justify-content: center;
+            overflow: hidden;
+           
+        }
+
+        #skills {
+            justify-content: center;
+            
+            width: 90%;
+        }
+        .about-me{
+            width: 90%;
+            padding-left: 10px;
+        }
+        #skill-head {
+            margin-left: 10px;
         }
     
     }
